--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/images/styles.css">
+    <link rel="stylesheet" href="./assets/styles.css">
     <title>Document</title>
 </head>
 <body>
     
-    <nav class=" cssNav navbar sticky-top navbar-expand-lg navbar-light bg-gold">
+    <section class="row">
+    <nav class="col-12 cssNav navbar sticky-top navbar-expand-lg navbar-light bg-gold">
         <a class="navbar-brand" href="#home">Daniel Masefield</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -23,28 +24,38 @@
           </div>
         </div>
       </nav>
-      <section class="col-12 section1">
-      <div class=" headers">
+</section>
+      <section class="row">
+      <div class="col-12 section1 headers">
         <h1 class="faulty-letter">FULL ST<span class="faulty-letter">A</span>CK WEB DEVELOPER</h1>
       </div>
-    </section>  
+      <div class="col-12 btnDiv">
+        <a href="#sec2"><button class="downBtn">Hello</button></a>
+      </div>
+    </section>
+
     <section class="section2">
         <div class="gold">
-            <h1></h1>
+            <h1 id="sec2">ME</h1>
         </div>  
-        <div>
-            <img class="me-img">
-        </div>
-        <div>
-            <p>about me about me about me about me about me </p>
-        </div>
+        <div class="card mx-auto" style="width: 80%;">
+  <img src="./assets/images/avatar.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+<div class="col-12 btnDiv2">
+    <a href="#sec3"><button class="downBtn">Hello</button></a>
+  </div>
     </section>
+
     <section class="section3">
         <div class="gold">
             <h1>MY WORK</h1>
         </div>
         <div class="carousel"></div>
     </section>
+
     <section class="section4">
         <div class="gold">
             <h1>CONTACT</h1>
@@ -63,5 +74,6 @@
             </ul>
         </div>
     </section>
+
 </body>
 </html>
