Added button CSS for a triangle shape & href to home, about me, and work sections on buttons.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     
-    <section class="row">
-    <nav class="col-12 cssNav navbar sticky-top navbar-expand-lg navbar-light bg-gold">
-        <a class="navbar-brand" href="#home">Daniel Masefield</a>
+    <section>
+    <nav id="home" class="cssNav navbar navbar-expand-lg navbar-light bg-gold">
+        <a class="navbar-brand" >Daniel Masefield</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,35 +30,41 @@
         <h1 class="faulty-letter">FULL ST<span class="faulty-letter">A</span>CK WEB DEVELOPER</h1>
       </div>
       <div class="col-12 btnDiv">
-        <a href="#sec2"><button class="downBtn">Hello</button></a>
+        <a href="#sec2"><button class="downBtn1"></button></a>
       </div>
     </section>
 
     <section class="section2">
+        <div id="sec2" class="col-12 btnDiv">
+            <a href="#home"><button class="downBtn2"></button></a>
+          </div>
         <div class="gold">
-            <h1 id="sec2">ME</h1>
+            <h1 id="headers">ME</h1>
         </div>  
-        <div class="card mx-auto" style="width: 80%;">
+        <div class="card mx-auto" style="width: 30%;">
   <img src="./assets/images/avatar.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
 </div>
 <div class="col-12 btnDiv2">
-    <a href="#sec3"><button class="downBtn">Hello</button></a>
+    <a href="#sec3"><button class="downBtn1"></button></a>
   </div>
     </section>
 
     <section class="section3">
+        <div id="sec3" class="col-12 btnDiv">
+            <a href="#sec2"><button class="downBtn2"></button></a>
+          </div>
         <div class="gold">
-            <h1>MY WORK</h1>
+            <h1 id="headers">MY WORK</h1>
         </div>
         <div class="carousel"></div>
     </section>
 
     <section class="section4">
         <div class="gold">
-            <h1>CONTACT</h1>
+            <h1 id="headers">CONTACT</h1>
         </div>
         <div>
             <ul>
