--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         <p class="contactP">Please feel free to contact me via the methods listed below.</p>
       </div>
       <ul class="link-list">
-        <a class="href" href=mailto:"staroyee@gmail.com" target="_blank">
-          <li class="links">staroyee@gmail.com</li>
+        <a class="href" href=mailto:"danmasefield@gmail.com" target="_blank">
+          <li class="links">danmasefield@gmail.com</li>
         </a>
         <a class="href" href="https://www.linkedin.com/in/danielmasefield03" target="_blank">
           <li class="links">LinkedIn</li>
