--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="./assets/images/avatar.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-warning" style="text-align: center;">Driven Full stack web developer with a passion for
-          crafting innovative and efficient digital solutions featuring mobile first designs.Strengths in creativity,
+          crafting innovative and efficient digital solutions. Strengths in creativity,
           teamwork, leadership and building projects from ideation to execution. </p>
       </div>
     </div>
