--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="./assets/images/avatar.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text text-warning" style="text-align: center;">Driven Full stack web developer with a passion for
-          crafting innovative and efficient digital solutions featuring mobile first designs.Strengths in creativity,
+          crafting innovative and efficient digital solutions featuring mobile first designs. Strengths in creativity,
           teamwork, leadership and building projects from ideation to execution. </p>
       </div>
     </div>
@@ -73,10 +73,13 @@
     </div>
     <div class="ctr-accordion">
       <div class="tab">
+        <a href="https://delt-fitness-e-commerce-36c3e8da33f5.herokuapp.com/"><img src="assets/images/e-commerce.JPG"></a>
+      </div>
+      <div class="tab">
         <a href="https://github.com/Staroyee/Project-Movie-Multiverse"><img src="assets/images/movie.JPG"></a>
       </div>
       <div class="tab">
-        <a href="https://github.com/Staroyee/Daniel-readme-generator"><img src="assets/images/readme.JPG"></a>
+        <a href="https://tech-blog-staroyee-0f66f97e3132.herokuapp.com/"><img src="assets/images/blog.JPG"></a>
       </div>
       <div class="tab">
         <a href="https://github.com/Staroyee/daniel-weather-dashboard"><img src="assets/images/weather.JPG"></a>
@@ -86,9 +89,6 @@
       </div>
       <div class="tab">
         <a href="https://github.com/Staroyee/JS-Password-Generator"><img src="assets/images/password.JPG"></a>
-      </div>
-      <div class="tab">
-        <a href="https://github.com/Staroyee/Daniel-Quiz"><img src="assets/images/quiz.JPG"></a>
       </div>
     </div>
     <div class="col-12 btnDiv2">
